@@ -30,7 +30,6 @@ import org.opengroup.osdu.entitlements.v2.logging.AuditLogger;
 import org.opengroup.osdu.entitlements.v2.model.ChildrenReference;
 import org.opengroup.osdu.entitlements.v2.model.EntityNode;
 import org.opengroup.osdu.entitlements.v2.model.ParentReference;
-import org.opengroup.osdu.entitlements.v2.model.ParentTreeDto;
 import org.opengroup.osdu.entitlements.v2.model.Role;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
@@ -40,8 +39,6 @@ import org.springframework.test.context.junit.jupiter.SpringExtension;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -110,7 +107,7 @@ class RetrieveGroupRepoJdbcTest {
 
     List<String> parentIds = sut.loadDirectParents(DATA_PARTITION_ID, member.getNodeId()).stream()
         .map(ParentReference::getId)
-        .collect(Collectors.toList());
+        .toList();
     assertEquals(2, parentIds.size());
 
     assertTrue(parentIds.contains(group1.getNodeId()));
@@ -119,40 +116,7 @@ class RetrieveGroupRepoJdbcTest {
     assertFalse(parentIds.contains(group2.getNodeId()));
   }
 
-  @Test
-  void shouldReturnEmptySetIfNoParentsWhenLoadAllParents() {
-    EntityNode member = getMemberNode("member");
 
-    jdbcTemplateRunner.saveMemberInfoEntity(MemberInfoEntity.fromEntityNode(member, Role.MEMBER));
-
-    ParentTreeDto parents = sut.loadAllParents(member);
-    assertEquals(0, parents.getParentReferences().size());
-  }
-
-  @Test
-  void shouldReturnAllParentsAndMaxDepthWhenLoadAllParents() {
-    EntityNode member = getMemberNode("member");
-    EntityNode group1 = getUsersGroupNode("x");
-    EntityNode group2 = getUsersGroupNode("y");
-    EntityNode group3 = getUsersGroupNode("z");
-
-    GroupInfoEntity savedGroup1 = GroupInfoEntity.fromEntityNode(group1);
-    GroupInfoEntity savedGroup2 = GroupInfoEntity.fromEntityNode(group2);
-    GroupInfoEntity savedGroup3 = GroupInfoEntity.fromEntityNode(group3);
-
-    when(jdbcTemplateRunner.getGroupInfoEntitiesRecursive(any())).thenReturn(
-        Arrays.asList(savedGroup1, savedGroup2, savedGroup3));
-
-    Set<String> parentIds = sut.loadAllParents(member).getParentReferences().stream()
-        .map(ParentReference::getId)
-        .collect(Collectors.toSet());
-    assertEquals(3, parentIds.size());
-
-    assertTrue(parentIds.contains(group1.getNodeId()));
-    assertTrue(parentIds.contains(group2.getNodeId()));
-    assertTrue(parentIds.contains(group3.getNodeId()));
-
-  }
 
   @Test
   void shouldReturnFalseWhenNoDirectChildInTenant() {
